FEAT: Added today date

--- a/src/app/positive-things-form/positive-things-form.component.html
+++ b/src/app/positive-things-form/positive-things-form.component.html
@@ -1,1 +1,7 @@
-<p>positive-things-form works!</p>
+<div class="row align-items-start mx-auto">
+    <div class="col">
+      <h4>Today is: {{todayDate | date:"MM/dd/yyyy"}}</h4>
+      <h3>3 Positives Things of the Day</h3>
+    </div>
+  </div>
+  
