FEAT: Create component positve thing calendar. Add date picker from angular material

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,10 @@
-<app-positive-things-form></app-positive-things-form>
+<div class="container">
+  <div class="row align-items-start mx-auto padding-cont">
+    <div class="col">
+      <app-positive-things-form></app-positive-things-form>
+    </div>
+    <div class="col">
+      <app-positive-things-calendar></app-positive-things-calendar>
+    </div>
+  </div>
+</div>
