--- a/src/app/positive-things-form/positive-things-form.component.html
+++ b/src/app/positive-things-form/positive-things-form.component.html
@@ -1,120 +1,120 @@
-<div class="row align-items-start mx-auto">
-  <div class="col">
-    <h4>Today is: {{ todayDate | date: "MM/dd/yyyy" }}</h4>
-    <h3>3 Positives Things of the Day</h3>
-    <form
-      name="form"
-      #formOfPositivesThings="ngForm"
-      [formGroup]="positiveThingsForm"
-      (ngSubmit)="onSubmit()"
-      novalidate
+<h4>Today is: {{ todayDate | date: "MM/dd/yyyy" }}</h4>
+<h3>
+  3 Positives Things of the Day
+  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-emoji-smile" viewBox="0 0 16 16">
+    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"></path>
+    <path d="M4.285 9.567a.5.5 0 0 1 .683.183A3.498 3.498 0 0 0 8 11.5a3.498 3.498 0 0 0 3.032-1.75.5.5 0 1 1 .866.5A4.498 4.498 0 0 1 8 12.5a4.498 4.498 0 0 1-3.898-2.25.5.5 0 0 1 .183-.683zM7 6.5C7 7.328 6.552 8 6 8s-1-.672-1-1.5S5.448 5 6 5s1 .672 1 1.5zm4 0c0 .828-.448 1.5-1 1.5s-1-.672-1-1.5S9.448 5 10 5s1 .672 1 1.5z"></path>
+  </svg>
+</h3> 
+<form
+  name="form"
+  #formOfPositivesThings="ngForm"
+  [formGroup]="positiveThingsForm"
+  (ngSubmit)="onSubmit()"
+  novalidate
+>
+  <div class="mb-3">
+    <label for="firstPositiveThing" class="form-label">First Thing </label>
+    <label style="color: red"> * </label>
+    <textarea
+      [(ngModel)]="positiveJournalDay.firstPositiveThing"
+      name="firstPositiveThing"
+      class="form-control"
+      id="firstPositiveThing"
+      rows="3"
+      formControlName="firstPositiveThing"
+      required
+    ></textarea>
+    <div
+      *ngIf="
+        (firstPositiveThing?.invalid &&
+          (firstPositiveThing?.dirty || firstPositiveThing?.touched)) ||
+        formOfPositivesThings.submitted
+      "
     >
-      <div class="mb-3">
-        <label for="firstPositiveThing" class="form-label">First Thing </label>
-        <label style="color: red"> * </label>
-        <textarea
-          [(ngModel)]="positiveJournalDay.firstPositiveThing"
-          name="firstPositiveThing"
-          class="form-control"
-          id="firstPositiveThing"
-          rows="3"
-          formControlName="firstPositiveThing"
-          required
-        ></textarea>
-        <div
-          *ngIf="
-            (firstPositiveThing?.invalid &&
-              (firstPositiveThing?.dirty || firstPositiveThing?.touched)) ||
-            formOfPositivesThings.submitted
-          "
-        >
-          <div
-            class="alert alert-danger"
-            role="alert"
-            *ngIf="firstPositiveThing?.errors?.['required']"
-          >
-            Fill this field
-          </div>
-        </div>
-      </div>
-      <div class="mb-3">
-        <label for="secondPositiveThing" class="form-label"
-          >Second Thing
-        </label>
-        <label style="color: red"> * </label>
-        <textarea
-          [(ngModel)]="positiveJournalDay.secondPositiveThing"
-          name="secondPositiveThing"
-          class="form-control"
-          id="secondPositiveThing"
-          rows="3"
-          formControlName="secondPositiveThing"
-          required
-        ></textarea>
-        <div
-          *ngIf="
-            (secondPositiveThing?.invalid &&
-              (secondPositiveThing?.dirty || secondPositiveThing?.touched)) ||
-            formOfPositivesThings.submitted
-          "
-        >
-          <div
-            class="alert alert-danger"
-            role="alert"
-            *ngIf="secondPositiveThing?.errors?.['required']"
-          >
-            Fill this field
-          </div>
-        </div>
-      </div>
-      <div class="mb-3">
-        <label for="thirdPositiveThing" class="form-label">Third Thing </label>
-        <label style="color: red"> * </label>
-        <textarea
-          [(ngModel)]="positiveJournalDay.thirdPositiveThing"
-          name="thirdPositiveThing"
-          class="form-control"
-          id="thirdPositiveThing"
-          rows="3"
-          formControlName="thirdPositiveThing"
-          required
-        ></textarea>
-        <div
-          *ngIf="
-            (thirdPositiveThing?.invalid &&
-              (thirdPositiveThing?.dirty || thirdPositiveThing?.touched)) ||
-            formOfPositivesThings.submitted
-          "
-        >
-          <div
-            class="alert alert-danger"
-            role="alert"
-            *ngIf="thirdPositiveThing?.errors?.['required']"
-          >
-            Fill this field
-          </div>
-        </div>
-      </div>
-      <input type="submit" value="Save" />
-      &nbsp;
       <div
-        *ngIf="showSpinner"
-        class="spinner-border spinner-border-sm"
-        role="status"
-      ></div>
-      <input
-        *ngIf="positiveThingsForm.disabled"
-        type="button"
-        (click)="onUpdatePositiveThings()"
-        value="Update"
-      />      
-    </form>
-    <br />
-    <div *ngIf="isDateSaved" class="text-center alert alert-success" role="alert">
-      Your day have been saved
-    </div>
-    <div *ngIf="saveError" class="text-center alert alert-danger" role="alert">
-      There was an error saving the information. Try again later.
+        class="alert alert-danger"
+        role="alert"
+        *ngIf="firstPositiveThing?.errors?.['required']"
+      >
+        Fill this field
+      </div>
     </div>
   </div>
+  <div class="mb-3">
+    <label for="secondPositiveThing" class="form-label">Second Thing </label>
+    <label style="color: red"> * </label>
+    <textarea
+      [(ngModel)]="positiveJournalDay.secondPositiveThing"
+      name="secondPositiveThing"
+      class="form-control"
+      id="secondPositiveThing"
+      rows="3"
+      formControlName="secondPositiveThing"
+      required
+    ></textarea>
+    <div
+      *ngIf="
+        (secondPositiveThing?.invalid &&
+          (secondPositiveThing?.dirty || secondPositiveThing?.touched)) ||
+        formOfPositivesThings.submitted
+      "
+    >
+      <div
+        class="alert alert-danger"
+        role="alert"
+        *ngIf="secondPositiveThing?.errors?.['required']"
+      >
+        Fill this field
+      </div>
+    </div>
+  </div>
+  <div class="mb-3">
+    <label for="thirdPositiveThing" class="form-label">Third Thing </label>
+    <label style="color: red"> * </label>
+    <textarea
+      [(ngModel)]="positiveJournalDay.thirdPositiveThing"
+      name="thirdPositiveThing"
+      class="form-control"
+      id="thirdPositiveThing"
+      rows="3"
+      formControlName="thirdPositiveThing"
+      required
+    ></textarea>
+    <div
+      *ngIf="
+        (thirdPositiveThing?.invalid &&
+          (thirdPositiveThing?.dirty || thirdPositiveThing?.touched)) ||
+        formOfPositivesThings.submitted
+      "
+    >
+      <div
+        class="alert alert-danger"
+        role="alert"
+        *ngIf="thirdPositiveThing?.errors?.['required']"
+      >
+        Fill this field
+      </div>
+    </div>
+  </div>
+  <input type="submit" value="Save" />
+  &nbsp;
+  <div
+    *ngIf="showSpinner"
+    class="spinner-border spinner-border-sm"
+    role="status"
+  ></div>
+  <input
+    *ngIf="positiveThingsForm.disabled"
+    type="button"
+    (click)="onUpdatePositiveThings()"
+    value="Update"
+  />
+</form>
+<br />
+<div *ngIf="isDateSaved" class="text-center alert alert-success" role="alert">
+  Your day have been saved
+</div>
+<div *ngIf="saveError" class="text-center alert alert-danger" role="alert">
+  There was an error saving the information. Try again later.
 </div>
