--- a/src/app/positive-things-calendar/positive-things-calendar.component.html
+++ b/src/app/positive-things-calendar/positive-things-calendar.component.html
@@ -1,22 +1,28 @@
 <h4>Look for the positive things of a past day</h4>
 <mat-form-field appearance="fill">
   <mat-label>Choose a date</mat-label>
-  <input matInput [matDatepicker]="picker" (dateChange)="setSelectedDate($event.value)"/>
+  <input
+    matInput
+    [matDatepicker]="picker"
+    (dateChange)="setSelectedDate($event.value)"
+  />
   <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
   <mat-datepicker #picker></mat-datepicker>
 </mat-form-field>
-<!-- <div ng-if="$ctrl.positiveThingsOfSelectedDay">
-    <h4>First Thing</h4>
-    <p>{{$ctrl.positiveThingsOfSelectedDay.first}}</p>
-      <h4>Second Thing</h4>
-      <p>{{$ctrl.positiveThingsOfSelectedDay.second}}</p>
-      <h4>Third Thing</h4>
-      <p>{{$ctrl.positiveThingsOfSelectedDay.third}}</p>
-  </div> -->
-<!-- <div
-    ng-if="$ctrl.positiveThingsOfSelectedDay === null"
-    class="alert alert-danger"
-    role="alert"
-  >
-    Day not found
-  </div> -->
+<div *ngIf="positiveJournalDay">
+  <div class="alert alert-primary" role="alert">    
+    <h4><b>First Thing</b></h4>
+    <p>{{ positiveJournalDay?.firstPositiveThing }}</p>
+    <h4><b>Second Thing</b></h4>
+    <p>{{ positiveJournalDay?.secondPositiveThing }}</p>
+    <h4><b>Third Thing</b></h4>
+    <p>{{ positiveJournalDay?.thirdPositiveThing }}</p>
+  </div>
+</div>
+<div
+  *ngIf="positiveJournalDay === null"
+  class="alert alert-danger text-center"
+  role="alert"
+>
+  Day not found
+</div>
